@@ -25,14 +25,14 @@ Fixed    * the scrolling position is not yet updated (when following a
 Advanced * viewport scrolling is not yet optimized (takes lots of CPU)
          * you may experience crashes from "assert" statements from
            unfinished code.
-         * context menus are not yet completely hooked or activated
+Fixed    * context menus are not yet completely hooked or activated
          * Selecting text with the mouse is half hooked. This is, you
            can see the selected text in the terminal but can't paste.
          * Searching for text is not yet hooked. Look in test/ directory
            of dw2 for an example of find text.
-         * Form elements are not yet hooked/implemented. You can look
+Advanced * Form elements are not yet hooked/implemented. You can look
            in dw2' test/dw_ui_test.cc to see what's already done.
-         * Sometimes pages don't load giving a warning on an already
+Fixed    * Sometimes pages don't load giving a warning on an already
            closed IO. I'll try to look at this one soon.
 
     * no FRAMES rendering
